# bwa-mem3-rs

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  DIVERGENCES.md  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: bench-arm.yml  bench-x86.yml  ci.yml  parity.yml  profile-x86.yml  publish-crates-io.yml  release.yml
bench/uarch/: README.md  mlp_probe.c  superpage_probe.c  tlb_probe.c
crates/bwa-chain/: Cargo.toml
crates/bwa-chain/src/: kbtree.rs  lib.rs  lib.rs.bak
crates/bwa-cli/: Cargo.toml
crates/bwa-cli/src/: cmd_index.rs  cmd_mem.rs  main.rs
crates/bwa-cli/tests/: batch_count.rs
crates/bwa-core/: Cargo.toml
crates/bwa-core/src/: cpu.rs  dna.rs  error.rs  lib.rs  opt.rs  rg.rs  sysram.rs
crates/bwa-diff/: Cargo.toml
crates/bwa-diff/src/: lib.rs
crates/bwa-extend/: Cargo.toml
crates/bwa-extend/src/: lib.rs  sw.rs
crates/bwa-gpu/: Cargo.toml
crates/bwa-gpu/src/: backend.rs  lib.rs
crates/bwa-index/: Cargo.toml
crates/bwa-index/examples/: bwt_binning.rs  libsais_parity.rs  sa_batch_bench.rs  star_vs_fm.rs
crates/bwa-index/src/: bntseq.rs  build.rs  fmindex.rs  lib.rs  lisa.rs  packed.rs  rand48.rs  rmi.rs  sais.rs
crates/bwa-index/tests/: index_byte_identity.rs
crates/bwa-io/: Cargo.toml
crates/bwa-io/src/: fastq.rs  lib.rs  sam.rs
crates/bwa-mem/: Cargo.toml
crates/bwa-mem/src/: across.rs  alt.rs  cigar.rs  lib.rs  pe.rs  primary.rs
crates/bwa-neon/: Cargo.toml
crates/bwa-neon/examples/: bench_batch.rs
crates/bwa-neon/src/: batched.rs  kswv.rs  lib.rs  matesw.rs
crates/bwa-sam/: Cargo.toml
crates/bwa-sam/src/: lib.rs
crates/bwa-seed/: Cargo.toml
crates/bwa-seed/examples/: hybrid_bench.rs
crates/bwa-seed/src/: lib.rs  lisa_seed.rs
docs/: optimization-roadmap.md  perf-levers.md
docs/superpowers/plans/: 2026-07-21-phase0-fork-baseline.md
docs/superpowers/specs/: 2026-07-21-beat-fork-speed-ram-design.md
packaging/bioconda/: README.md  SHA256  build.sh  conda_build_config.yaml  meta.yaml
scripts/: accuracy.py  alt_parity.sh  bench.sh  check.sh  fetch_giab30x.sh  fork_bench.sh  giab30x_bench.sh  giab30x_pe.sh  giab_bench.sh  index_diff.sh  make_test_reads.py  make_testdata.sh  opt_parity.sh  oracle_diff.sh  pe_diverge_hunt.sh  pe_diverge_subset.sh  pgo.sh  publication_bench.sh  scale_test.sh  setup_reference.sh  upstream_repros.sh  vs_mem2.sh
testdata/tiny/: tiny.fa  tiny.fa.0123  tiny.fa.ann  tiny.fa.bwt.2bit.64  tiny.fa.pac
