[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Benjamin Demaille <benjamin.demaille@icloud.com>"]
repository = "https://github.com/bdemaille/bwa-mem3-rs"

[workspace.dependencies]
# --- internal crates (path-only; Cargo.lock is the pin of record) ---
bwa-core = { path = "crates/bwa-core" }
bwa-io = { path = "crates/bwa-io" }
bwa-index = { path = "crates/bwa-index" }
bwa-seed = { path = "crates/bwa-seed" }
bwa-chain = { path = "crates/bwa-chain" }
bwa-extend = { path = "crates/bwa-extend" }
bwa-sam = { path = "crates/bwa-sam" }
bwa-mem = { path = "crates/bwa-mem" }
bwa-diff = { path = "crates/bwa-diff" }
bwa-gpu = { path = "crates/bwa-gpu" }
bwa-neon = { path = "crates/bwa-neon" }
# --- external ---
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
needletail = "0.6"
memmap2 = "0.9"
rayon = "1"
bgzf = { version = "0.4", features = ["multithreading-simple"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
mimalloc = { version = "0.1", default-features = false }

# Release profile tuned for reproducible builds: a single codegen unit removes parallel-codegen
# nondeterminism; fat LTO is a pure optimization (deterministic under a fixed toolchain, changes no
# output byte). Output determinism is enforced separately (single-thread + fixed -K).
[profile.release]
codegen-units = 1
lto = "fat"
