[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.96"
license = "MIT"
authors = ["Benjamin Demaille <benjamin.demaille@icloud.com>"]
repository = "https://github.com/IPNP-BIPN/bwa-mem3-rs"

# CI runs `cargo clippy --workspace --all-targets -- -D warnings`, so this list is what stands
# between "the gate is meaningful" and "the gate is off". Each entry is a lint the tree does not
# currently satisfy. They are allowed EXPLICITLY, not silenced globally, so a NEW lint of any other
# kind still fails the build. Burn these down rather than adding to them.
[workspace.lints.clippy]
# Doc-comment formatting in the module headers written during the documentation pass. Cosmetic,
# affects rustdoc rendering only. Safe to fix, just not worth a reflow of every glossary table today.
doc_overindented_list_items = "allow"
doc_lazy_continuation = "allow"
# Indexed loops in the DP kernels and the index builder. The suggested iterator rewrites are
# equivalent, but explicit indices are what make these loops diffable against the C line by line,
# which is how every parity bug in this project has been found. Deliberate.
needless_range_loop = "allow"
manual_memcpy = "allow"
# `SwJob`'s variants differ in size because one carries inline scratch. Boxing it would add an
# allocation per job on the hot path. Measure before changing.
large_enum_variant = "allow"
# The remaining three are genuinely worth fixing; they are listed so the gate can go green today
# and shrink from here.
unusual_byte_groupings = "allow"
ptr_arg = "allow"
field_reassign_with_default = "allow"

[workspace.dependencies]
# --- internal crates (path-only; Cargo.lock is the pin of record) ---
bwa-core = { path = "crates/bwa-core" }
bwa-io = { path = "crates/bwa-io" }
bwa-index = { path = "crates/bwa-index" }
bwa-seed = { path = "crates/bwa-seed" }
bwa-chain = { path = "crates/bwa-chain" }
bwa-extend = { path = "crates/bwa-extend" }
bwa-sam = { path = "crates/bwa-sam" }
bwa-mem = { path = "crates/bwa-mem" }
bwa-diff = { path = "crates/bwa-diff" }
bwa-neon = { path = "crates/bwa-neon" }
# --- external ---
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
needletail = "0.6"
memmap2 = "0.9"
rayon = "1"
bgzf = { version = "0.4", features = ["multithreading-simple"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
mimalloc = { version = "0.1", default-features = false }
# BAM/CRAM output. `hts-sys` compiles the vendored htslib C sources with the system toolchain, so
# there is no runtime dependency on a brew/apt htslib. `default-features = false` drops bzip2, lzma
# and curl: we only ever WRITE local files, and htslib's own writers never pick those codecs (BAM is
# BGZF/deflate; CRAM defaults to gzip + rANS), so dropping them costs nothing and removes three C
# libraries from the build. Reading a third-party CRAM that used them is out of scope here.
rust-htslib = { version = "1", default-features = false }

# Release profile tuned for reproducible builds: a single codegen unit removes parallel-codegen
# nondeterminism; fat LTO is a pure optimization (deterministic under a fixed toolchain, changes no
# output byte). Output determinism is enforced separately (single-thread + fixed -K).
[profile.release]
codegen-units = 1
lto = "fat"
