[package]
name = "bwa-chain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
bwa-index = { workspace = true }
bwa-seed = { workspace = true }

[lints]
workspace = true
