[package]
name = "bwa-mem4-chain"
description = "Seed chaining for bwa-mem4, including faithful ports of klib's kbtree and unstable introsort."
readme = "../../README.md"
keywords = ["bioinformatics", "alignment", "genomics", "bwa"]
categories = ["science"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
bwa-index = { workspace = true }
bwa-seed = { workspace = true }

[lints]
workspace = true
