[package]
name = "bwa-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "bwa-mem3"
path = "src/main.rs"

[dependencies]
bwa-core = { workspace = true }
bwa-io = { workspace = true }
bwa-index = { workspace = true }
bwa-mem = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
