[package]
name = "bwa-mem-oxide"
description = "A native Rust reimplementation of the bwa-mem2 short-read aligner, indexer included, whose acceptance criterion is byte-identical output: the same index files and the same SAM bytes."
readme = "../../README.md"
keywords = ["bioinformatics", "alignment", "genomics", "bwa", "sam"]
categories = ["science", "command-line-utilities"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "bwa-mem4"
path = "src/main.rs"

[dependencies]
bwa-core = { workspace = true }
bwa-chain = { workspace = true }
bwa-io = { workspace = true }
bwa-index = { workspace = true }
bwa-mem = { workspace = true }
bwa-neon = { workspace = true }
clap = { workspace = true }
mimalloc = { workspace = true }
anyhow = { workspace = true }
rayon = { workspace = true }
bgzf = { workspace = true }
rust-htslib = { workspace = true }

[lints]
workspace = true
