[package]
name = "bwa-mem3-core"
description = "Core types, alignment options and scoring matrix for bwa-mem3, a byte-identical Rust reimplementation of bwa-mem2."
readme = "../../README.md"
keywords = ["bioinformatics", "alignment", "genomics", "bwa"]
categories = ["science"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
