[package]
name = "bwa-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-extend = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"

[lints]
workspace = true
