[package]
name = "bwa-mem4-index"
description = "FM-index construction and loading for bwa-mem4, producing index files byte-identical to bwa-mem2 index."
readme = "../../README.md"
keywords = ["bioinformatics", "alignment", "genomics", "bwa"]
categories = ["science"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# The package is renamed for crates.io, but the LIBRARY keeps its original name: targets in
# this same package (examples/star_vs_fm.rs, examples/sa_batch_bench.rs, examples/bwt_binning.rs, tests/index_byte_identity.rs) refer to it as `bwa_index`.
[lib]
name = "bwa_index"

[dependencies]
bwa-core = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
# Optional faster suffix-array construction (index BUILD only). Off by default: the default build
# uses the in-tree pure-Rust SA-IS and stays byte-identical with zero extra dependencies. With
# `--features libsais` the SA is built by libsais-rs instead (a pure-Rust translation of Ilya
# Grebnov's libsais, no C toolchain). A suffix array is UNIQUE, so the produced index is byte-identical
# either way; `scripts/index_diff.sh` is the gate. Only `index` speed changes, never `mem` output.
libsais-rs = { version = "0.2", optional = true }

[features]
# libsais is ON by default: it builds the suffix array via libsais-rs (a pure-Rust, Apache-2.0
# translation of Ilya Grebnov's libsais), ~3x faster to build than the in-tree SA-IS and BYTE-IDENTICAL
# (a suffix array is unique; gated by scripts/index_diff.sh). `--no-default-features` falls back to the
# dependency-free SA-IS. Only `index` build speed changes, never `mem` output.
default = ["libsais"]
libsais = ["dep:libsais-rs"]

[[example]]
name = "libsais_parity"
required-features = ["libsais"]

[lints]
workspace = true
