[package]
name = "bwa-mem4-io"
description = "FASTA/FASTQ input and hand-formatted SAM output for bwa-mem4, byte-controlled to match bwa-mem2 exactly."
readme = "../../README.md"
keywords = ["bioinformatics", "alignment", "genomics", "bwa"]
categories = ["science"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
needletail = { workspace = true }

[lints]
workspace = true
