[package]
name = "bwa-mem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
bwa-index = { workspace = true }
bwa-seed = { workspace = true }
bwa-chain = { workspace = true }
bwa-extend = { workspace = true }

[dev-dependencies]
# NEON backend, exercised end-to-end by the across-reads batched-extension equivalence test.
bwa-neon = { workspace = true }
