[package]
name = "bwa-mem"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
bwa-index = { workspace = true }
bwa-seed = { workspace = true }
bwa-chain = { workspace = true }
bwa-extend = { workspace = true }
# SIMD kernels: the batched mate-rescue local-SW (self-dispatching NEON/scalar).
bwa-neon = { workspace = true }

[lints]
workspace = true
