[package]
name = "bwa-seed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bwa-core = { workspace = true }
bwa-index = { workspace = true }

[dev-dependencies]
needletail = { workspace = true }
bwa-neon = { workspace = true }
